# horatio

./: .gitignore  Makefile  README.md  buildspec.yml
apps/inspector/: Makefile  package.sh  pylintrc  pyproject.toml
apps/inspector/inspector/: main.py  run.py
apps/inspector/inspector/accounts/: get_accounts_to_inspect.py
apps/inspector/inspector/recorder/: recorder.py
apps/inspector/inspector/services/: budgets.py  cloudformation.py  codebuild.py  codepipeline.py  codestar_connections.py  ec2.py  iam.py  sns.py  vpc.py
apps/inspector/inspector/utils/: assume_role.py  paginate.py
apps/inspector/tests/services/: test_codepipeline.py  test_ec2.py  test_iam.py  test_sns.py
apps/recorder/: Makefile  package.sh  pylintrc  pyproject.toml
apps/recorder/recorder/: config.yml  main.py  run.py
apps/reporter/: Makefile  package.sh  pylintrc  pyproject.toml
apps/reporter/reporter/: main.py
apps/reporter/reporter/db/: dynamo.py
apps/reporter/reporter/email/: generate_body.py  send_email.py
apps/reporter/reporter/utils/: dynamo.py
apps/reporter/tests/utils/: test_dynamo.py
ci/: codepipeline.yml
common-resources/ci/: codepipeline.yml
common-resources/scripts/: pipeline.sh
common-resources/stacks/: dynamo.yml
scripts/: invoke-lambda.sh  pipeline.sh
stacks/accounts-janitor-account/: dynamo.yml  inspector.yml
stacks/accounts-janitor-account/apps/: inspector.yml  recorder.yml  reporter.yml
stacks/accounts-janitor-account/apps/parameters/recorder/: test.json
stacks/accounts-janitor-account/common-resources/: dynamo.yml  ses.yml  sqs.yml
stacks/accounts-janitor-account/common-resources/parameters/dynamo/: live.json
stacks/accounts-janitor-account/common-resources/parameters/ses/: live.json
stacks/management-account/: deploy.sh  horatio-list-accounts-role.yml
