[tool.poetry]
name = "recorder"
version = "0.1.0"
description = "lambda to record rule state"
authors = ["Alex Chesters <10558792+AlexChesters@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.10"
aws-lambda-powertools = {extras = ["tracer"], version = "^2.3.1"}
ruamel-yaml = "^0.18.6"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
